--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "zonalyzer",
+  "version": "1.0.0",
+  "description": "Zonalyzer - Evaluador Comercial",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
