--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "firebase": "^11.9.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
